Улучшены сканирование, CI, темы оформления и интернационализация.
Масштабное обновление, улучшающее сканирование репозиториев, рабочие процессы CI, генератор пользовательского интерфейса, темы и переводы. Добавлены файлы .editorconfig, CHANGELOG.md и SUPPORT.md, скрипт проверки перед развертыванием и документация по развертыванию; обновлены рабочие процессы GitHub Actions, теперь они включают тайм-ауты в минутах и ​​кэширование pip. Расширен GitHubClient для поддержки множества расширений/имен файлов, одновременной защищенной загрузки файлов, улучшенных сообщений об ошибках HTTP, настраиваемых ограничений на количество строк при загрузке и более надежного анализа контента. Расширено обнаружение стека и добавлены новые проверки качества/CI/документации (наличие журнала изменений/документации, проверка YAML в рабочем процессе, кэш/тайм-ауты CI, обнаружение использования README, эвристики линтинга и тестирования, поддержка Dart и т. д.). Обновлены метки, темы и шаблоны веб-генератора, а также добавлено кэширование качества в реальном времени и обработка среды выполнения Vercel в основном приложении. Включает тесты и незначительные доработки интерфейса/статического кода.

--- a/app/locales/translations.json
+++ b/app/locales/translations.json
@@ -93,10 +93,24 @@
             "theme_aurora": "Aurora",
             "theme_sand": "Sand",
             "theme_matrix": "Matrix",
+            "theme_volcano": "Volcano",
+            "theme_arctic": "Arctic",
+            "theme_noir": "Noir",
+            "theme_sakura": "Sakura",
             "theme_custom": "Custom",
             "gen_locale": "Locale",
             "gen_custom_theme_title": "Custom palette",
             "gen_custom_theme_hint": "Pick colors manually. Values are appended to SVG URL as query params.",
+            "gen_theme_random": "Random theme",
+            "gen_palette_preset": "Palette preset",
+            "gen_preset_ocean": "Ocean Breeze",
+            "gen_preset_ember": "Ember",
+            "gen_preset_neon": "Neon Pulse",
+            "gen_preset_paper": "Paper",
+            "gen_preset_forest": "Forest Ink",
+            "gen_apply_preset": "Apply preset",
+            "gen_randomize_palette": "Randomize",
+            "gen_reset_palette": "Reset palette",
             "gen_color_bg_start": "BG start",
             "gen_color_bg_end": "BG end",
             "gen_color_border": "Border",
@@ -131,6 +145,8 @@
             "gen_hide_categories": "Categories bars",
             "gen_hide_ring": "Score ring panel",
             "gen_hide_footer": "Footer",
+            "gen_hide_select_all": "Select all",
+            "gen_hide_clear": "Clear",
             "gen_card_width": "Card width",
             "gen_langs_count": "Languages count (repo only)",
             "gen_animate": "Animate",
@@ -141,6 +157,8 @@
             "gen_anim_ring": "ring",
             "gen_anim_none": "none",
             "gen_duration": "Animation duration (ms)",
+            "gen_cache_seconds": "Cache seconds (SVG)",
+            "gen_include_report": "Include full report (quality JSON)",
             "gen_preview": "Preview",
             "gen_copy_url": "Copy URL",
             "gen_copy_md": "Copy Markdown",
@@ -151,8 +169,8 @@
             "status_pass_badge": "PASS",
             "status_warn_badge": "WARN",
             "status_fail_badge": "FAIL",
-            "gen_import_url": "Import from GitHub URL",
-            "gen_import_placeholder": "https://github.com/owner/repo",
+            "gen_import_url": "Import from GitHub URL / API URL / Markdown",
+            "gen_import_placeholder": "https://github.com/owner/repo or ![Card](https://.../api?...)",
             "gen_import_apply": "Import"
         },
         "ru": {
@@ -241,10 +259,24 @@
             "theme_aurora": "Аврора",
             "theme_sand": "Песок",
             "theme_matrix": "Матрица",
+            "theme_volcano": "Вулкан",
+            "theme_arctic": "Арктика",
+            "theme_noir": "Нуар",
+            "theme_sakura": "Сакура",
             "theme_custom": "Своя",
             "gen_locale": "Язык",
             "gen_custom_theme_title": "Ручная палитра",
             "gen_custom_theme_hint": "Выберите цвета вручную. Значения добавляются в SVG URL как query-параметры.",
+            "gen_theme_random": "Случайная тема",
+            "gen_palette_preset": "Пресет палитры",
+            "gen_preset_ocean": "Морской бриз",
+            "gen_preset_ember": "Угли",
+            "gen_preset_neon": "Неон",
+            "gen_preset_paper": "Бумага",
+            "gen_preset_forest": "Лесные чернила",
+            "gen_apply_preset": "Применить пресет",
+            "gen_randomize_palette": "Случайные цвета",
+            "gen_reset_palette": "Сброс палитры",
             "gen_color_bg_start": "Начало фона",
             "gen_color_bg_end": "Конец фона",
             "gen_color_border": "Граница",
@@ -279,6 +311,8 @@
             "gen_hide_categories": "Бары категорий",
             "gen_hide_ring": "Панель кольца оценки",
             "gen_hide_footer": "Футер",
+            "gen_hide_select_all": "Выбрать все",
+            "gen_hide_clear": "Очистить",
             "gen_card_width": "Ширина карточки",
             "gen_langs_count": "Количество языков (только repo)",
             "gen_animate": "Анимировать",
@@ -289,6 +323,8 @@
             "gen_anim_ring": "кольцо",
             "gen_anim_none": "нет",
             "gen_duration": "Длительность анимации (мс)",
+            "gen_cache_seconds": "Кэш (сек, SVG)",
+            "gen_include_report": "Добавить полный отчет (quality JSON)",
             "gen_preview": "Превью",
             "gen_copy_url": "Копировать URL",
             "gen_copy_md": "Копировать Markdown",
@@ -306,8 +342,8 @@
             "status_pass_badge": "ОК",
             "status_warn_badge": "ПРЕДУПРЕЖДЕНИЕ",
             "status_fail_badge": "ОШИБКА",
-            "gen_import_url": "Импорт из GitHub",
-            "gen_import_placeholder": "https://github.com/owner/repo",
+            "gen_import_url": "Импорт из GitHub / API URL / Markdown",
+            "gen_import_placeholder": "https://github.com/owner/repo или ![Card](https://.../api?...)",
             "gen_import_apply": "Импорт"
         }
     },
@@ -351,7 +387,7 @@
                 "apiLabelMetrics": "Metrics",
                 "copy": "Copy",
                 "copied": "Copied",
-                "invalidGeneratorRepoUrl": "Enter a valid GitHub URL like https://github.com/owner/repo"
+                "invalidGeneratorRepoUrl": "Enter a valid GitHub URL, card API URL, or Markdown embed like ![...](https://.../api?...)."
             },
             "ru": {
                 "enterRepoUrl": "Введите ссылку на репозиторий.",
@@ -377,7 +413,7 @@
                 "apiLabelQualitySvg": "Статистика оценки SVG",
                 "apiLabelHealth": "Состояние сервиса",
                 "apiLabelMetrics": "Метрики сервиса",
-                "invalidGeneratorRepoUrl": "Введите корректную ссылку GitHub вида https://github.com/owner/repo"
+                "invalidGeneratorRepoUrl": "Введите корректную ссылку GitHub, URL карточки API или Markdown-вставку вида ![...](https://.../api?...)."
             }
         }
     },
@@ -395,21 +431,35 @@
             "readme_length": "Длина README",
             "contributing_exists": "Наличие CONTRIBUTING",
             "license_exists": "Наличие лицензии",
+            "changelog_exists": "Наличие CHANGELOG",
+            "docs_dir_exists": "Наличие каталога docs/",
+            "readme_usage_section": "README содержит инструкцию по запуску/использованию",
             "workflow_files": "Файлы workflow",
             "workflow_trigger": "Триггеры workflow",
             "ci_stage_coverage": "Покрытие этапов CI",
+            "workflow_yaml_valid": "Валидность YAML workflow",
+            "ci_cache_configured": "Кэширование зависимостей в CI",
+            "workflow_timeouts": "Таймауты задач workflow",
             "actions_pinned": "Закрепление GitHub Actions",
             "secret_patterns": "Проверка секретов",
             "dependency_hygiene": "Гигиена зависимостей",
+            "workflow_permissions": "Явные permissions в workflow",
+            "security_contact": "Контакты/инструкции по security-reporting",
             "dependency_vulnerabilities": "Уязвимости зависимостей",
             "lint_config": "Конфиг линтера",
+            "editorconfig_exists": "Наличие .editorconfig",
             "tests_exist": "Наличие тестов",
+            "tests_run_in_ci": "Запуск тестов в CI",
             "releases_or_tags": "Релизы/теги",
             "recent_activity": "Недавняя активность",
+            "support_docs": "Наличие SUPPORT/MAINTAINERS",
+            "release_notes_file": "Наличие changelog/release notes",
             "codeowners_exists": "Наличие CODEOWNERS",
             "pr_template_exists": "Шаблон PR",
             "issue_template_exists": "Шаблон issue",
             "security_policy_exists": "Наличие SECURITY.md",
+            "code_of_conduct_exists": "Наличие CODE_OF_CONDUCT",
+            "funding_config_exists": "Наличие FUNDING-конфига",
             "score_regression_guard": "Контроль регресса оценки",
             "policy_config_valid": "Файл политики"
         },
@@ -480,7 +530,54 @@
             "SECURITY.md found.": "SECURITY.md найден.",
             "Current score meets baseline threshold.": "Текущая оценка соответствует базовому порогу.",
             "Release/tag metadata found.": "Обнаружены метаданные релизов/тегов.",
-            "Add a LICENSE file and set repository license.": "Добавьте файл LICENSE и укажите лицензию репозитория."
+            "Add a LICENSE file and set repository license.": "Добавьте файл LICENSE и укажите лицензию репозитория.",
+            "No CHANGELOG/CHANGES file found.": "Файл CHANGELOG/CHANGES не найден.",
+            "Add CHANGELOG.md to document notable releases.": "Добавьте CHANGELOG.md с описанием важных релизов.",
+            "Found docs/ directory.": "Каталог docs/ найден.",
+            "No docs/ directory found.": "Каталог docs/ не найден.",
+            "Add docs/ with architecture, API, and usage details.": "Добавьте docs/ с описанием архитектуры, API и использования.",
+            "Found usage/setup section in README.": "В README найден раздел с использованием/настройкой.",
+            "README does not clearly describe usage/setup steps.": "README не содержит достаточно четких шагов использования/настройки.",
+            "Add 'Usage' or 'Getting Started' section with runnable setup instructions.": "Добавьте раздел 'Usage' или 'Getting Started' с рабочими шагами запуска.",
+            "Workflow YAML validation skipped because no workflows were found.": "Проверка YAML workflow пропущена: workflow-файлы не найдены.",
+            "Add workflow files in .github/workflows.": "Добавьте workflow-файлы в .github/workflows.",
+            "Fix YAML syntax errors in workflow files.": "Исправьте синтаксические ошибки YAML в workflow-файлах.",
+            "Workflow YAML parsed successfully.": "YAML workflow успешно разобран.",
+            "Detected caching directives in workflows.": "В workflow обнаружены директивы кэширования.",
+            "No dependency cache configuration found in workflows.": "В workflow не найдена настройка кэша зависимостей.",
+            "Enable dependency caching in CI to reduce runtime and flaky installs.": "Включите кэширование зависимостей в CI, чтобы сократить время и нестабильность установок.",
+            "Detected timeout-minutes in workflows.": "В workflow обнаружены timeout-minutes.",
+            "No timeout-minutes found in workflows.": "В workflow не найдены timeout-minutes.",
+            "Set timeout-minutes for long-running CI jobs.": "Задайте timeout-minutes для длительных задач CI.",
+            ".editorconfig found.": ".editorconfig найден.",
+            ".editorconfig not found.": ".editorconfig не найден.",
+            "Add .editorconfig for consistent editor settings.": "Добавьте .editorconfig для единых настроек редактора.",
+            "No tests directory or recognizable test files found.": "Каталог тестов или распознаваемые тестовые файлы не найдены.",
+            "Add automated tests (for example tests/ and language-specific test files).": "Добавьте автоматические тесты (например tests/ и тестовые файлы для вашего языка).",
+            "Detected test execution commands in workflows.": "В workflow обнаружены команды запуска тестов.",
+            "No recognizable test command found in workflow files.": "В workflow-файлах не найдены распознаваемые команды запуска тестов.",
+            "Add a test step in CI workflow (pytest/npm test/go test/etc).": "Добавьте шаг запуска тестов в CI workflow (pytest/npm test/go test и т.д.).",
+            "No workflows found, permissions check skipped.": "Workflow не найдены, проверка permissions пропущена.",
+            "When adding workflows, declare explicit permissions: blocks.": "При добавлении workflow задавайте явные блоки permissions:.",
+            "Declare least-privilege permissions: for all GitHub Actions workflows.": "Задайте permissions по принципу наименьших привилегий для всех workflow GitHub Actions.",
+            "All workflow files define explicit permissions.": "Во всех workflow-файлах заданы явные permissions.",
+            "SECURITY.md not found; no disclosure contact information.": "SECURITY.md не найден; отсутствуют контакты для сообщения об уязвимостях.",
+            "Add SECURITY.md with vulnerability reporting process and contact channel.": "Добавьте SECURITY.md с процессом сообщения об уязвимостях и контактным каналом.",
+            "Security policy includes reporting instructions/contact details.": "Политика безопасности содержит инструкции и контакты для reporting.",
+            "SECURITY.md exists but does not clearly provide contact/reporting details.": "SECURITY.md существует, но не содержит достаточно явных контактов/инструкций для reporting.",
+            "Add explicit contact/reporting instructions in SECURITY.md.": "Добавьте явные контакты и инструкции по reporting в SECURITY.md.",
+            "Support/maintainers document found.": "Документ поддержки/мейнтейнеров найден.",
+            "No SUPPORT.md or MAINTAINERS.md found.": "SUPPORT.md или MAINTAINERS.md не найден.",
+            "Add SUPPORT.md or MAINTAINERS.md with maintenance ownership/contact.": "Добавьте SUPPORT.md или MAINTAINERS.md с зонами ответственности и контактами поддержки.",
+            "Changelog/release notes file found.": "Файл changelog/release notes найден.",
+            "No changelog/release notes file found.": "Файл changelog/release notes не найден.",
+            "Maintain CHANGELOG.md to record release notes and breaking changes.": "Ведите CHANGELOG.md для фиксации release notes и breaking changes.",
+            "CODE_OF_CONDUCT found.": "CODE_OF_CONDUCT найден.",
+            "CODE_OF_CONDUCT.md not found.": "CODE_OF_CONDUCT.md не найден.",
+            "Add CODE_OF_CONDUCT.md to define expected community behavior.": "Добавьте CODE_OF_CONDUCT.md с правилами поведения сообщества.",
+            ".github/FUNDING.yml found.": ".github/FUNDING.yml найден.",
+            "Funding configuration not found.": "Конфигурация funding не найдена.",
+            "Optionally add .github/FUNDING.yml for sponsorship/donation links.": "Опционально добавьте .github/FUNDING.yml со ссылками на спонсорство/донаты."
         },
         "patterns_ru": [
             {
@@ -554,6 +651,14 @@
             {
                 "pattern": "^Policy has validation issues: (.+)$",
                 "template": "Обнаружены ошибки валидации политики: {0}"
+            },
+            {
+                "pattern": "^Found (\\d+) workflow file\\(s\\) with YAML parsing issues\\.$",
+                "template": "Найдено workflow-файлов с ошибками YAML: {0}."
+            },
+            {
+                "pattern": "^(\\d+) workflow file\\(s\\) do not define explicit permissions\\.$",
+                "template": "В workflow-файлах без явных permissions: {0}."
             }
         ]
     },
