Add JSON fields selector and HEAD support
Add UI and JS for selecting which JSON fields to include in API responses (generator and web UIs), including presets, sync/apply functions, and URL param handling. Add server-side handling of the `fields` query param to filter repository/quality dicts via _select_dict_fields and support the `__none__`/"none" sentinel to return an empty object. Enable HEAD on SVG and API endpoints to return empty bodies with correct content-type and cache headers. Add related i18n strings and tests for HEAD responses and fields filtering.

--- a/app/locales/translations.json
+++ b/app/locales/translations.json
@@ -159,6 +159,8 @@
             "gen_duration": "Animation duration (ms)",
             "gen_cache_seconds": "Cache seconds (SVG)",
             "gen_include_report": "Include full report (quality JSON)",
+            "gen_fields_flags": "Fields (JSON)",
+            "gen_fields_all": "All",
             "gen_preview": "Preview",
             "gen_copy_url": "Copy URL",
             "gen_copy_md": "Copy Markdown",
@@ -325,6 +327,8 @@
             "gen_duration": "Длительность анимации (мс)",
             "gen_cache_seconds": "Кэш (сек, SVG)",
             "gen_include_report": "Добавить полный отчет (quality JSON)",
+            "gen_fields_flags": "Поля (JSON)",
+            "gen_fields_all": "Все",
             "gen_preview": "Превью",
             "gen_copy_url": "Копировать URL",
             "gen_copy_md": "Копировать Markdown",
@@ -372,6 +376,7 @@
                 "trendAria": "Score trend",
                 "notAvailable": "n/a",
                 "none": "None",
+                "all": "All",
                 "failedToLoadJson": "Failed to load JSON",
                 "privateRepoTokenPrompt": "Repository not found. If it is private, provide a GitHub token and try again. Token is not stored.",
                 "apiLabelReportJson": "Report JSON",
@@ -397,6 +402,7 @@
                 "noTrend": "Недостаточно данных для графика.",
                 "notAvailable": "н/д",
                 "none": "Ничего",
+                "all": "Все",
                 "failedToLoadJson": "Не удалось загрузить JSON",
                 "privateRepoTokenPrompt": "Репозиторий не найден. Если он приватный, добавьте GitHub токен и повторите. Токен не сохраняется.",
                 "apiLabelReportJson": "Отчет JSON",
